Game can now successfully load the "classic mode" level.  Need to optimize the drawing routines badly, as having the player on screen reduces the framerate below 1.